app/globals.css
:root {
  --background: #ffffff;
  --foreground: #171717;
  --navbar-height: 40px;
  /* Define navbar height as a variable */
  --font-nunito: 'Nunito', sans-serif;
  /* Define font variable */
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

.mainContent {
  padding-top: calc(var(--navbar-height) + 20px);
}

html,
body {
  height: 100%;
  max-width: 100vw;
  overflow: hidden; /* Prevent scrolling on html/body */
}

body {
  color: var(--foreground);
  background: var(--background);
  font-family: var(--font-nunito);
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

a {
  color: inherit;
  text-decoration: none;
}

.poll-list-item:hover {
  background-color: var(--mantine-color-gray-0);
  box-shadow: var(--mantine-shadow-sm);
}

@media (prefers-color-scheme: dark) {
  html {
    color-scheme: dark;
  }
}

